fix: move register to auth
