# src/routes/auth.route.ts
@@ -4,6 +4,7 @@ import { protect } from '../middlewares/auth';
 
 const router = Router();
 
+router.post('/register', authController.register);
 router.post('/login', authController.login);
 router.get('/me', protect, authController.getMe);
 router.post('/logout', protect, authController.logout);
